enrich swagger docs
