# modules/contacts/contact.router.ts
@@ -2,7 +2,6 @@ import express, { Request, Response } from 'express'
 import { Contact } from './contact.models'
 
 const router = express.Router()
-const baseApiUrl = '/api/contacts'
 const contacts: Contact[] = [
 	{
 		id: 'test123',
@@ -16,15 +15,95 @@ const contacts: Contact[] = [
 	},
 ]
 
-/* GET contact list. */
 router.get('/api/contacts', async (req: Request, res: Response) => {
-	// #swagger.tags = ['Contacts']
+	/* 
+		#swagger.tags = ['Contacts']
+		#swagger.parameters['name'] = {
+					in: 'query',
+					type: 'string'
+		}
+		#swagger.parameters['isDisabled'] = {
+					in: 'query',
+					type: 'bool'
+		}
+		#swagger.responses[200] = {
+			content: {
+                "application/json": {
+                    schema: { $ref: "#/definitions/contactArray" },
+                }
+            }
+        }   
+    */
 	res.send(contacts)
 })
 
+router.get('/api/contacts/:id', async (req: Request, res: Response) => {
+	/* 
+		#swagger.tags = ['Contacts']
+		#swagger.parameters['id'] = { required: true, in: 'path' }
+		#swagger.responses[200] = {
+			content: {
+                "application/json": {
+                    schema: { $ref: "#/definitions/contactArray" },
+                }
+            }
+        }   
+    */
+	res.send(contacts)
+})
+
+
 router.post('/api/contacts', async (req: Request, res: Response) => {
-	// #swagger.tags = ['Contacts']
+	/*  
+		#swagger.tags = ['Contacts']
+		#swagger.requestBody = {
+            required: true,
+			content: {
+                "application/json": {
+                    schema: { $ref: "#/definitions/contact" },
+                }
+            }
+        }
+		#swagger.responses[201] = {
+			content: {
+                "application/json": {
+                    schema: { $ref: "#/definitions/contact" },
+                }
+            }
+        }
+    */
 	res.status(201).send(contacts[0])
+})
+
+router.put('/api/contacts/:id', async (req: Request, res: Response) => {
+	/*  
+		#swagger.tags = ['Contacts']
+		#swagger.parameters['id'] = { required: true, in: 'path' }
+		#swagger.requestBody = {
+            required: true,
+			content: {
+                "application/json": {
+                    schema: { $ref: "#/definitions/contact" },
+                }
+            }
+        }
+		#swagger.responses[200] = {
+			content: {
+                "application/json": {
+                    schema: { $ref: "#/definitions/contact" },
+                }
+            }
+        }
+    */
+	res.status(200).send(contacts[0])
+})
+
+router.delete('/api/contacts/:id', async (req: Request, res: Response) => {
+	/*  
+		#swagger.tags = ['Contacts']
+		#swagger.parameters['id'] = { required: true, in: 'path' }
+    */
+	res.sendStatus(200)
 })
 
 export default router
